# microchip-jtag-flasher-ftdi

./: .gitignore  README.md  main.c  meson.build
libs/DirectC/: dpcom.c  dpuser.c  dpuser.h  dputil.c
libs/DirectC/RTG4Algo/: dpRTG4alg.c
libs/DirectC/SPIFlash/: dpS25F.c  dpS25F.h  dpSPIalg.c  dpSPIalg.h  dpSpiProg.c  dpSpiProg.h
